force-app/main/default/objects/cdcpc__RD_Manufacturing_Document_Details__c/cdcpc__RD_Manufacturing_Document_Details__c.object-meta.xml
<CustomObject>
    <label>RD Manufacturing Document Details</label>
    <nameField>
        <label>RD Manufacturing Document Details</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Manufacturing Document Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>