force-app/main/default/objects/cdcpc__RD_Manufacturing_Document_Details__c/fields/cdcpc__DimA__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DimA__c</fullName>
    <label>DimA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>