force-app/main/default/objects/cdcpc__RD_Manufacturing_Document_Details__c/fields/cdcpc__DimB__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DimB__c</fullName>
    <label>DimB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>