force-app/main/default/objects/cdcpc__RD_Manufacturing_Document_Details__c/fields/cdcpc__DrawingID__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DrawingID__c</fullName>
    <label>DrawingID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>