force-app/main/default/objects/cdcpc__RD_Manufacturing_Document_Details__c/fields/cdcpc__Revision__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Revision__c</fullName>
    <label>Revision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>