force-app/main/default/objects/cdcpc__RD_Manufacturing_Document_Details__c/fields/cdcpc__Text6Val__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__Text6Val__c</fullName>
    <label>Text6Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>