force-app/main/default/objects/cdcpc__RD_Manufacturing_Document_Details__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Document_Type__c</columns>
    <columns>cdcpc__Text1Val__c</columns>
    <columns>cdcpc__Text2Val__c</columns>
    <columns>cdcpc__Text3Val__c</columns>
    <columns>cdcpc__Text4Val__c</columns>
    <columns>cdcpc__Text5Val__c</columns>
    <columns>cdcpc__Text6Val__c</columns>
    <columns>cdcpc__Text7Val__c</columns>
    <columns>cdcpc__NumVal1__c</columns>
    <columns>cdcpc__NumVal2__c</columns>
    <columns>cdcpc__Revision__c</columns>
    <columns>cdcpc__DrawingID__c</columns>
    <columns>cdcpc__DWGNO__c</columns>
    <columns>cdcpc__CDC_Ext_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__Text1Val__c</field>
        <operation>equals</operation>
        <value>WMP</value>
    </filters>
    <filters>
        <field>cdcpc__Text2Val__c</field>
        <operation>equals</operation>
        <value>0004</value>
    </filters>
    <label>All</label>
</ListView>